app/[locale]/globals.css
@import url("https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

/* BACKGROUNDS */

html {
  scroll-behavior: smooth;
}

body {
  font-family: "Open Sans";
}

.lenis-scrolling {
  scroll-behavior: initial;
}

.villabg1 {
  background-image: url("/villamain.jpg");
  background-size: cover;
  background-position: center;
}

.terracebg {
  background-image: url("/terrace.jpg");
  background-size: cover;
  background-position: center;
}

.vuebg {
  background-image: url("/vue.jpg");
  background-size: cover;
  background-position: left;
}

.greenterracebg {
  background-image: url("/greenterrace.jpeg");
  background-size: cover;
  background-position: center;
}

.chauffeurbg {
  background-image: url("/chauffeur.jpg");
  background-size: cover;
  background-position: center;
}

.breakfastbg {
  background-image: url("/breakfast.jpg");
  background-size: cover;
  background-position: center;
}

.laundrybg {
  background-image: url("/laundry.jpg");
  background-size: cover;
  background-position: center;
}

.eventsbg {
  background-image: url("/events.jpg");
  background-size: cover;
  background-position: center;
}

.dogsbg {
  background-image: url("/dogs.jpg");
  background-size: cover;
  background-position: center;
}

/* BACKGROUNDS */

.underline-animation p {
  position: relative;
  display: inline-block;
}

.underline-animation p::after {
  content: "";
  position: absolute;
  width: 93%;
  transform: scaleX(0);
  height: 1px;
  bottom: 0;
  left: 0;
  background-color: #000000; /* or any color you want */
  transform-origin: bottom;
  transition: transform 0.4s ease-in-out;
}

.underline-animation p:hover::after {
  transform: scaleX(1);
}

.underline-animation2 p {
  position: relative;
  display: inline-block;
}

.underline-animation2 p::after {
  content: "";
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 1px;
  bottom: 0;
  left: 0;
  background-color: #ffffff; /* or any color you want */
  transform-origin: bottom left;
  transition: transform 0.4s ease-in-out;
}

.underline-animation2 p:hover::after {
  transform: scaleX(1);
}

.bm-burger-button {
  width: 36px;
  height: 30px;
  left: 36px;

  top: 36px;
}

.bm-burger-bars {
  background: #373a47;
}

.bm-burger-bars-hover {
  background: #a90000;
}

.bm-cross-button {
  height: 24px;
  width: 24px;
}

.bm-cross {
  background: #bdc3c7;
}

.bm-menu-wrap {
  position: fixed;
  height: 100%;
}

.bm-menu {
  background: #373a47;
  padding: 0.3rem 0.3rem 0;
  font-size: 1.15em;
}

.bm-morph-shape {
  fill: #373a47;
}

.bm-item-list {
  color: #b8b7ad;
  padding: 0.8em;
}

.bm-item {
  display: inline-block;
}

.bm-overlay {
  background: rgba(0, 0, 0, 0.3);
}
/* styling next link component so that will be a column list of links*/
.bm-item-list a {
  display: flex;
  flex-direction: column;
}

/* .content {
  letter-spacing: vw;
  overflow: hidden;
} */

.language-selector::after {
  content: "►";
  display: inline-block;
  color: rgb(0, 0, 0);

  transition: transform 0.3s ease;
}

.language-selector.open::after {
  transform: rotate(90deg);
}

@keyframes rollDownFromTop {
  from {
    opacity: 0;
    transform: scaleY(0);
  }
  to {
    opacity: 1;
    transform: scaleY(1);
  }
}

@keyframes rollUpToTop {
  from {
    opacity: 1;
    transform: scaleY(1);
  }
  to {
    opacity: 0;
    transform: scaleY(0);
  }
}

.dropdown-animation-open {
  animation: rollDownFromTop 0.3s ease-out forwards;
  transform-origin: top;
}

.dropdown-animation-close {
  animation: rollUpToTop 0.3s ease-out forwards;
  transform-origin: top;
}

.chambre1bg {
  background-image: url("/ch1.jpg");
  background-size: cover;
  background-position: center;
}

.chambre2bg {
  background-image: url("/ch2.jpg");
  background-size: cover;
  background-position: center;
}

.chambre3bg {
  background-image: url("/ch3.jpeg");
  background-size: cover;
  background-position: center;
}

.turbie {
  background-image: url("/turbie.webp");
  background-size: cover;
  background-position: center;
}

.monaco {
  background-image: url("/monaco.webp");
  background-size: cover;
  background-position: center;
}

.cote {
  background-image: url("/cote.webp");
  background-size: cover;
  background-position: center;
}

@keyframes underline-grow {
  from {
    width: 0%;
  }
  to {
    width: 100%;
  }
}

.underline-animate::after {
  content: "";
  display: block;
  margin-top: -1px;
  height: 1px; /* or the height of your underline */
  background-color: #bc9d68; /* or your preferred underline color */
  animation: underline-grow 1s ease-in-out forwards; /* Adjust timing to your liking */
}

.container {
  position: relative;
  width: 50%;
  margin: 280px auto;
  padding: 20px 40px;
  border-radius: 4px;
}

.Loading {
  position: relative;
  display: inline-block;
  width: 100%;
  height: 10px;
  background: #f1f1f1;
  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
  border-radius: 4px;
  overflow: hidden;
}

.Loading:after {
  content: "";
  position: absolute;
  left: 0;
  width: 0;
  height: 100%;
  border-radius: 4px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
  animation: load 2s infinite;
}

@keyframes load {
  0% {
    width: 0;
    background: #ffffff;
  }

  50% {
    width: 60%;
    background: #bb9b66;
  }

  100% {
    width: 100%;
    background: #bb9b66;
  }
}

@keyframes pulse {
  0% {
    background: #bb9b66;
  }

  25% {
    background: #a0d2eb;
  }

  50% {
    background: #ffa8b6;
  }

  75% {
    background: #d0bdf4;
  }

  100% {
    background: #494d5f;
  }
}

